# IC-OP

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dfx.json  whitepaper.md
.cargo/: config.toml
crates/evm-canister/: Cargo.toml  evm_canister.did
crates/evm-canister/src/: lib.rs
crates/evm-core/: Cargo.toml
crates/evm-core/src/: base_fee.rs  bytes.rs  chain.rs  export.rs  hash.rs  lib.rs  revm_db.rs  revm_exec.rs  state_root.rs  trie_commit.rs  tx_decode.rs  tx_decode_deposit.rs  tx_submit.rs
crates/evm-core/tests/: export_api.rs  phase1_eth_decode.rs  phase1_fee_ordering.rs  phase1_fee_rules.rs  phase1_hash.rs  phase1_ic_decode.rs  phase1_l1_fee_context.rs  phase1_l1blockinfo_storage_update.rs  phase1_nonce_sequence.rs  phase1_op_deposit_decode.rs  phase1_produce_block_drop.rs  phase1_prune.rs  (+7 more)
crates/evm-db/: Cargo.toml
crates/evm-rpc-e2e/: Cargo.toml
crates/ic-evm-wrapper/: Cargo.toml  evm_canister.did
crates/ic-evm-wrapper/src/: lib.rs
docs/: data_tx_id.md  juno.md  phase0.md  phase1.1.md  phase1.2.md  phase1.3.md  phase1.4.md  phase1.5.md  phase1.md  phase2.2.md  phase2.3.md  phase2.md  phase3.md  phase4.md  phase5.md  plan.md  spec.md
docs/ops/: fixplan.md  fixplan2.md  indexer-runbook.md  problem.md
docs/specs/: indexer-v1.md  pruning-v1.md  storage-v2.md
scripts/: check_did_sync.sh  check_getrandom_wasm_features.sh  check_rng_paths.sh  ci-local.sh  manual_deploy.sh  playground_manual_deploy.sh  playground_smoke.sh  rpc_compat_smoke.sh
tools/indexer/: .env.example  .env.local  README.md  package-lock.json  package.json
(+62 files in other folders)
